# KBLaM

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  branch_comparison_tasks.json  compare_branches.py  comprehensive_comparison.json  docker-compose.yml  entrypoint.sh  eval_acc.ipynb  inference.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: codeql.yml  main.yml  pr.yml  run-tests.yml  weekly.yml
dataset_generation/: .env  1k.json  Dockerfile  create_train_test_split.py  docker-compose.yml  entrypoint.sh  gen_synthetic_data.py  gen_wikipedia_data.py  gen_wikipedia_data.txt  generate_kb_embeddings.py  kb_embeddings_chatopenai.py  raptor_tree.json  requirements.txt  synthetic_data_chatopenai.py
dataset_generation/Wikidata/: Dockerfile  docker-compose.yml  entrypoint.sh  gen_wikipedia_data.py  wikipedia_data_prompts.py
dataset_generation/dataset/: wiki_dataset.json  wiki_dataset.tmp.json
datasets/: .gitattributes  datasetcard_enron.md  datasetcard_synthetic.md  synthetic.json  synthetic_data_ger_augmented.json  test_synthetic_data_ger.json
docs/: branch_comparison_tool.md
experiments/: Makefile  eval.py  output_scorer.py  output_scorer_open_ended.py  train.py
src/kblam/: .env  gpt_session.py  kb_encoder.py
src/kblam/models/: kblam_config.py  kblam_processor.py  llama3_2_model.py  llama3_model.py  llama_model.py  phi3_model.py
src/kblam/utils/: branch_comparator.py  convert.py  data_utils.py  data_utils_ger.py  eval_utils.py  eval_utils_ger.py  ger_utils.py  model_utils.py  train_utils.py
tests/: sample_data.json  test_branch_comparator.py  test_dataset.json  test_dataset_construction.py  test_kb_encoder.py
